# miroir-hackathon

./: .gitignore  README.md  pyproject.toml
backend/: .env.example  main.py
backend/core/: config.py  database.py  logging.py
backend/models/: schemas.py
backend/prompts/: profile_extraction.py
backend/routers/: contacts.py  contracts.py  decisions.py  guidelines.py  vapi.py
backend/services/: actions.py  contract_service.py  email_sender.py  email_service.py  enron.py  evaluation.py  guidelines.py  human_escalation.py  pipeline.py  post_call.py  profiler.py  scheduler.py
documentation/: DEMO_SCRIPT.md  MIROIR_Build_Plan_v2.docx
frontend/: .cta.json  .env.example  package.json  pnpm-lock.yaml
frontend/src/: routeTree.gen.ts  styles.css
frontend/src/components/: Header.tsx  JsonHighlight.tsx
frontend/src/lib/: api.ts  mock.ts  uploadthing-core.ts  uploadthing.ts  utils.ts
frontend/src/routes/: __root.tsx  contacts.$contactId.tsx  index.tsx
frontend/src/routes/api/: uploadthing.ts
scripts/: add_recruitment_contact.py  create_guidelines_table.sql  download_enron.py  generate_short_summaries.py  push_profiles_to_supabase.py  run_profiling.py  seed_recruitment_contacts.py  test_preset_contacts.py
